--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "securereverseshell"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Jim Coyne <jicoyne@cisco.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
